--- a/YahooHack/YahooHack-Info.plist
+++ b/YahooHack/YahooHack-Info.plist
@@ -20,6 +20,8 @@
 	<string>1.0</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIApplicationExitsOnSuspend</key>
+	<true/>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
